--- a/realisation.html
+++ b/realisation.html
@@ -56,13 +56,13 @@
                             <img src="images/reseauelectrique.jpg" alt="Éclairage de la cuisine">
                         </div>
                     </div>
-                </a>
+               
                 <div class="projet-detail">
                     <h3>Maison résidentielle moderne</h3>
                     <p>Installation électrique complète pour une nouvelle construction, incluant la domotique et des solutions d'éclairage intelligentes.</p>
-                </div>
+                 </a></div> 
             </div>
-
+ 
             <div class="projet-fiche">
                 <div class="carrousel-images">
                     <div class="defilement-photos">
