--- a/realisation.html
+++ b/realisation.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Découvrez nos réalisations en électricité générale">
     <title>Projets - BLIXT</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/realisation.css">
@@ -13,7 +14,7 @@
 <body>
 
     <header>
-        <div class="logo-container">
+        <div class="logo-container" aria-label="Ouvrir le menu de navigation">
             <img src="images/logo-transparent.png" alt="Logo de Blixt" class="logo">
         </div>
 
@@ -49,7 +50,7 @@
             
             <div class="projet-fiche">
                 <a href="realisation-projet1.html">
-                    <div class="carrousel-images">
+                    <div class="carrousel-images" role="group" aria-label="">
                         <div class="defilement-photos">
                             <img src="images/entreprisechantiert.jpg" alt="Installation électrique d'une maison neuve">
                             <img src="images/entreprise.jpg" alt="Détail du tableau électrique">
