--- a/services.html
+++ b/services.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Découvrez tous les services électriques de BLIXT">
     <title>Nos services d'électricité | BLIXT</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/services.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
-    
+</head>  
 <body>
 
   <header>
@@ -17,7 +18,7 @@
             <img src="images/logo-transparent.png" alt="Logo de Blixt" class="logo">
         </div>
 
-        <button class="menu-burger-bouton">
+        <button class="menu-burger-bouton" aria-label="Ouvrir le menu de navigation">
             <span class="ligne-burger"></span>
             <span class="ligne-burger"></span>
             <span class="ligne-burger"></span>
@@ -59,7 +60,8 @@
                     <p>Installation, rénovation, et maintenance de systèmes électriques pour un environnement sûr et performant.</p>
                     <a href="#" class="btn btn-ouvrir-modale"
                     data-titre="Électricité Générale"
-                    data-description="Installation, rénovation, et maintenance de systèmes électriques pour un environnement sûr et performant. Nous faisons tout, du tableau à la prise.">
+                    data-description="Installation, rénovation, et maintenance de systèmes électriques pour un environnement sûr et performant. Nous faisons tout, du tableau à la prise."
+                    aria-label="Découvrir le service Électricité Générale en détail">
                     Découvrir</a>
                 </article>
 
