--- a/apropos.html
+++ b/apropos.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Découvrez l'histoire de BLIXT">
     <title>À propos de BLIXT | Votre électricien à Bourges</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/apropos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
-    
+</head>  
 <body>
 
  <header>
@@ -17,7 +18,7 @@
             <img src="images/logo-transparent.png" alt="Logo de Blixt" class="logo">
         </div>
 
-        <button class="menu-burger-bouton">
+        <button class="menu-burger-bouton" aria-label="Ouvrir le menu de navigation">
             <span class="ligne-burger"></span>
             <span class="ligne-burger"></span>
             <span class="ligne-burger"></span>
