--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Contactez BLIXT pour un devis gratuit et personnalisé à Bourges.">
     <title>Contactez BLIXT | Demandez un devis à Bourges</title>
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/base.css">
@@ -19,7 +20,7 @@
             <img src="images/logo-transparent.png" alt="Logo de Blixt" class="logo">
         </div>
 
-        <button class="menu-burger-bouton">
+        <button class="menu-burger-bouton" aria-label="Ouvrir le menu de navigation">
             <span class="ligne-burger"></span>
             <span class="ligne-burger"></span>
             <span class="ligne-burger"></span>
@@ -96,7 +97,9 @@
                 </div>
                 </div>
                 <div class="conteneur-carte">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12345.678901234567!2d2.3916962!3d47.0810125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47fa908332145025%3A0x6b772c2957b4f535!2s18000%20Bourges%2C%20France!5e0!3m2!1sfr!2sfr!4v1633512345678!5m2!1sfr!2sfr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12345.678901234567!2d2.3916962!3d47.0810125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47fa908332145025%3A0x6b772c2957b4f535!2s18000%20Bourges%2C%20France!5e0!3m2!1sfr!2sfr!4v1633512345678!5m2!1sfr!2sfr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+                    title="Localisation de BLIXT à Bourges sur Google Maps">
+                </iframe>
                 </div>
             </div>
         </div>
@@ -110,6 +113,7 @@
         <a href="/realisation.html" class="btn">Voir nos réalisations</a>
     </div>
 </section>
+    </main>
 
 <footer class="site-footer">
         <div class="footer-container">
@@ -152,5 +156,5 @@
     </footer>
 
     <script src="js/burger.js"></script>
-    
+</body>  
 </html>
