--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="description" content="BLIXT : Votre électricien expert et certifié à Bourges (18).">
     <title>BLIXT | Électricien à Bourges, Expert et Certifié</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/index.css">
@@ -16,7 +17,7 @@
             <img src="images/logo-transparent.png" alt="Logo de Blixt" class="logo">
         </div>
 
-        <button class="menu-burger-bouton">
+        <button class="menu-burger-bouton" aria-label="Ouvrir le menu de naviguation">
             <span class="ligne-burger"></span>
             <span class="ligne-burger"></span>
             <span class="ligne-burger"></span>
@@ -95,8 +96,10 @@
     <section class="section-carte">
         <h2 class="titre-section">Où nous trouver ?</h2>
         <div class="conteneur-carte">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1450.4852331770068!2d2.3999999999999995!3d47.081012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47fa9083311956e3%3A0xc49b78e11a681335!2sBourges!5e0!3m2!1sen!2sfr!4v1678822000000!5m2!1sen!2sfr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1450.4852331770068!2d2.3999999999999995!3d47.081012!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47fa9083311956e3%3A0xc49b78e11a681335!2sBourges!5e0!3m2!1sen!2sfr!4v1678822000000!5m2!1sen!2sfr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                title="Localisation de BLIXT sur Google Maps">
+            </iframe>
+         </div>
     </section>
 </main>
 
