--- a/realisation-projet1.html
+++ b/realisation-projet1.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Installation électrique complète pour une maison neuve et moderne.">
     <title>Réalisation : Maison résidentielle moderne | BLIXT</title>
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/realisationprojet.css">
@@ -18,7 +19,7 @@
             <img src="images/logo-transparent.png" alt="Logo de Blixt" class="logo">
         </div>
 
-        <button class="menu-burger-bouton">
+        <button class="menu-burger-bouton" aria-label="Ouvrir le menu de navigation">
             <span class="ligne-burger"></span>
             <span class="ligne-burger"></span>
             <span class="ligne-burger"></span>
