--- a/contact.html
+++ b/contact.html
@@ -155,6 +155,6 @@
         </div>
     </footer>
 
-    <script src="js/burger.js"></script>
+    <script defer src="js/burger.js"></script>
 </body>  
 </html>
