--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <img src="images/logo lapin2.png" alt="" srcset="">
         </div>
     </footer>
-    <script src="js/script.js"></script>
-    <script src="js/burger.js"></script>
+    <script defer src="js/script.js"></script>
+    <script defer="js/burger.js"></script>
 </body>
 </html>
