--- a/realisation-projet1.html
+++ b/realisation-projet1.html
@@ -124,6 +124,6 @@
         </div>
     </footer>
 
-    <script src="js/burger.js"></script>
+    <script defer src="js/burger.js"></script>
 </body>
 </html>
