--- a/realisation.html
+++ b/realisation.html
@@ -144,7 +144,7 @@
         </div>
     </footer>
 
-    <script src="js/projets-carousel.js"></script>
-    <script src="js/burger.js"></script>
+    <script  defer="js/projets-carousel.js"></script>
+    <script defer="js/burger.js"></script>
 </body>
 </html>
