--- a/services.html
+++ b/services.html
@@ -172,7 +172,7 @@
         </div>
     </footer>
 
-    <script src="js/modal.js"></script>
-    <script src="js/burger.js"></script>
+    <script defer src="js/modal.js"></script>
+    <script defer src="js/burger.js"></script>
 </body>
 </html>
