--- a/apropos.html
+++ b/apropos.html
@@ -147,6 +147,6 @@
         </div>
     </footer>
 
-    <script src="js/burger.js"></script>
+    <script defer src="js/burger.js"></script>
 </body>
 </html>
