test site perso

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
         <div class="footer-bottom">
             <p>© 2025 BLIXT. Tous droits réservés. Site réalisé par la team Casse Grain.</p>
-            <img src="images/logo lapin2.png" alt="" srcset="">
+            <a href="lapin.html"><img src="images/logo lapin2.png" alt="" srcset=""></a>
         </div>
     </footer>
     <script defer src="js/script.js"></script>
