--- a/contact.html
+++ b/contact.html
@@ -145,7 +145,7 @@
                 <div class="social-icons">
                     <a href="#" aria-label="Facebook"><img src="images/icons8-facebook-48.png" alt="Facebook"></a>
                     <a href="#" aria-label="Instagram"><img src="images/icons8-instagram-48.png" alt="Instagram"></a>
-                    <a href="#" aria-label="linkedin"><img src="images/icons8-linkedin-48.png" alt="Instagram"></a>
+                    <a href="https://www.linkedin.com/company/sas-blixt/" aria-label="linkedin"><img src="images/icons8-linkedin-48.png" alt="Instagram"></a>
                 </div>
             </div>
         </div>
