--- a/lapin.html
+++ b/lapin.html
@@ -47,7 +47,7 @@
                     Le code qui donne envie de croquer l'écran
                 </h1>
                 <p class="sous-titre-accueil">
-                    Votre site, c'est notre carotte. Laissez **La Team Casse Grain** construire votre présence numérique avec agilité, professionnalisme et une légère touche de folie.
+                    Votre site, c'est notre carotte. Laissez La Team Casse Grain construire votre présence numérique avec agilité, professionnalisme et une légère touche de folie.
                 </p>
                 <div class="boutons-accueil">
                     <a href="#realisations" class="bouton-neon bouton-primaire">Voir les Projets</a>
