--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+  <header>
         <div class="logo-container">
             <img src="images/logo-transparent.png" alt="Logo de Blixt" class="logo">
         </div>
 
-        <button class="menu-burger-bouton" aria-label="Ouvrir le menu de naviguation">
+        <button class="menu-burger-bouton" aria-label="Ouvrir le menu de navigation">
             <span class="ligne-burger"></span>
             <span class="ligne-burger"></span>
             <span class="ligne-burger"></span>
@@ -81,9 +81,6 @@
     <section class="section-a-propos">
         <div class="conteneur">
             <div class="grille-a-propos">
-                <div class="boite-image-a-propos">
-                    <img src="images/tetelapin.jpg" alt="Image de l'équipe BLIXT au travail" class="image-a-propos">
-                </div>
                 <div class="contenu-texte-a-propos">
                     <h2 class="titre-section">L'expertise BLIXT : <br>fiabilité et proximité</h2>
                     <p>Fondée sur la passion du métier, BLIXT est votre partenaire de confiance pour tous vos projets électriques. Notre équipe, basée à **Bourges**, est spécialisée dans les installations, les rénovations et les dépannages d'urgence, avec un engagement ferme pour la qualité et la sécurité.</p>
@@ -128,12 +125,12 @@
                 <p>Téléphone : <a href="tel:+33123456789">01 23 45 67 89</a></p>
                 <p>Email : <a href="mailto:contact@blixt.fr">contact@blixt.fr</a></p>
             </div>
-            <div class="footer-section">
+            <div class="footer-section-social">
                 <h3>Suivez-nous</h3>
                 <div class="social-icons">
                     <a href="#" aria-label="Facebook"><img src="images/icons8-facebook-48.png" alt="Facebook"></a>
                     <a href="#" aria-label="Instagram"><img src="images/icons8-instagram-48.png" alt="Instagram"></a>
-                    <a href="https://www.linkedin.com/in/antoine-nivelet-690387108/?originalSubdomain=fr" aria-label="linkedin"><img src="images/icons8-linkedin-48.png" alt="Instagram"></a>
+                    <a href="https://www.linkedin.com/company/sas-blixt/" aria-label="linkedin"><img src="images/icons8-linkedin-48.png" alt="Instagram"></a>
                 </div>
             </div>
         </div>
@@ -143,6 +140,6 @@
         </div>
     </footer>
     <script defer src="js/script.js"></script>
-    <script defer="js/burger.js"></script>
+    <script defer src="js/burger.js"></script>
 </body>
 </html>
