--- a/realisation.html
+++ b/realisation.html
@@ -134,7 +134,7 @@
                 <div class="social-icons">
                     <a href="#" aria-label="Facebook"><img src="images/icons8-facebook-48.png" alt="Facebook"></a>
                     <a href="#" aria-label="Instagram"><img src="images/icons8-instagram-48.png" alt="Instagram"></a>
-                    <a href="#" aria-label="linkedin"><img src="images/icons8-linkedin-48.png" alt="Instagram"></a>
+                    <a href="https://www.linkedin.com/company/sas-blixt/" aria-label="linkedin"><img src="images/icons8-linkedin-48.png" alt="Instagram"></a>
                 </div>
             </div>
         </div>
@@ -144,7 +144,7 @@
         </div>
     </footer>
 
-    <script  defer="js/projets-carousel.js"></script>
-    <script defer="js/burger.js"></script>
+    <script  defer src="js/projets-carousel.js"></script>
+    <script defer src="js/burger.js"></script>
 </body>
 </html>
