--- a/realisation-projet1.html
+++ b/realisation-projet1.html
@@ -62,16 +62,19 @@
                 </div>
             </div>
         </section>
-
-        <section class="galerie-projet">
+          <section class="galerie-projet">
             <div class="conteneur">
                 <h2 class="titre-galerie">Aperçu du projet en images</h2>
-                <div class="galerie-grille">
+                <div class="galerie-grille" id="galerie-grille-mobile">
                     <img src="images/boitiersolaire.jpg" alt="Vue de l'installation électrique principale" class="galerie-image">
                     <img src="images/domotique.jpg" alt="Détail du tableau électrique" class="galerie-image">
                     <img src="images/copain.png" alt="Installation d'un éclairage de salon intelligent" class="galerie-image">
                     <img src="images/entreprisechantiert.jpg" alt="Pose des interrupteurs de domotique" class="galerie-image">
                 </div>
+                
+                <div class="galerie-points">
+                    </div>
+
             </div>
         </section>
 
@@ -125,5 +128,6 @@
     </footer>
 
     <script defer src="js/burger.js"></script>
+    <script defer src="js/galerie.js"></script>
 </body>
 </html>
