--- a/services.html
+++ b/services.html
@@ -171,8 +171,9 @@
             <img src="images/logo lapin2.png" alt="" srcset="">
         </div>
     </footer>
-
+    
     <script defer src="js/modal.js"></script>
     <script defer src="js/burger.js"></script>
+    <script defer src="js/sercices-carrousel.js"></script>
 </body>
 </html>
