--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     
     <section class="section-message-accroche">
         <div class="conteneur">
-            <h1>BLIXT<br>L'Énergie qui Fait la Différence</h1>
+            <h1>BLIXT<br>L'Énergie qui fait la différence</h1>
             <p>Votre partenaire électrique, pour des solutions modernes et durables.</p>
             <a href="/services.html" class="btn-contact">Découvrir nos services</a>
         </div>
