--- a/index.html
+++ b/index.html
@@ -107,7 +107,9 @@
             </div>
             <div class="footer-section">
                 <h3>À propos de BLIXT</h3>
-                <p>Votre partenaire de confiance pour des solutions électriques innovantes et durables à Bourges et ses environs. Ensemble construisons l'avenir.</p>
+                <p>Votre partenaire de confiance pour des solutions électriques innovantes et durables à Bourges et ses environs. Ensemble construisons l'avenir.</p><br>
+                <p><a href="">Mentions légales</a></p>
+                <p><a href="">Politique de confidentialités</a></p>
             </div>
             <div class="footer-section ">
                 <h3>Liens rapides</h3>
