--- a/realisation.html
+++ b/realisation.html
@@ -140,7 +140,7 @@
                 <p>Téléphone : <a href="tel:+33123456789">01 23 45 67 89</a></p>
                 <p>Email : <a href="mailto:contact@blixt.fr">contact@blixt.fr</a></p>
             </div>
-            <div class="footer-section">
+            <div class="footer-section-social">
                 <h3>Suivez-nous</h3>
                 <div class="social-icons">
                     <a href="#" aria-label="Facebook"><img src="images/icons8-facebook-48.png" alt="Facebook"></a>
@@ -151,12 +151,10 @@
         </div>
         <div class="footer-bottom">
             <p>© 2025 BLIXT. Tous droits réservés. Site réalisé par la team Casse Grain.</p>
-            <img src="images/logo lapin2.png" alt="" srcset="">
+            <a href="lapin.html"><img src="images/logo lapin2.png" alt="" srcset=""></a>
         </div>
     </footer>
-
-    <script  defer src="js/projets-carousel.js"></script>
-    <script  defer src="js/projet-images.js"></script>
+    <script defer src="js/script.js"></script>
     <script defer src="js/burger.js"></script>
 </body>
 </html>
