--- a/realisation-projet1.html
+++ b/realisation-projet1.html
@@ -100,7 +100,7 @@
                 <h3>Liens rapides</h3>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
-                    <li><a href="projets.html">Projets</a></li>
+                    <li><a href="realisation.html">Réalisations</a></li>
                     <li><a href="services.html">Services</a></li>
                     <li><a href="apropos.html">À propos</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -112,7 +112,7 @@
                 <p>Téléphone : <a href="tel:+33123456789">01 23 45 67 89</a></p>
                 <p>Email : <a href="mailto:contact@blixt.fr">contact@blixt.fr</a></p>
             </div>
-            <div class="footer-section">
+            <div class="footer-section-social">
                 <h3>Suivez-nous</h3>
                 <div class="social-icons">
                     <a href="#" aria-label="Facebook"><img src="images/icons8-facebook-48.png" alt="Facebook"></a>
@@ -123,11 +123,10 @@
         </div>
         <div class="footer-bottom">
             <p>© 2025 BLIXT. Tous droits réservés. Site réalisé par la team Casse Grain.</p>
-            <img src="images/logo lapin2.png" alt="" srcset="">
+            <a href="lapin.html"><img src="images/logo lapin2.png" alt="" srcset=""></a>
         </div>
     </footer>
-
+    <script defer src="js/script.js"></script>
     <script defer src="js/burger.js"></script>
-    <script defer src="js/galerie.js"></script>
 </body>
 </html>
