--- a/realisation-projet1.html
+++ b/realisation-projet1.html
@@ -126,7 +126,8 @@
             <a href="lapin.html"><img src="images/logo lapin2.png" alt="" srcset=""></a>
         </div>
     </footer>
-    <script defer src="js/script.js"></script>
+    <script defer src="js/galerie.js"></script>
     <script defer src="js/burger.js"></script>
+    s
 </body>
 </html>
