--- a/realisation.html
+++ b/realisation.html
@@ -154,7 +154,8 @@
             <a href="lapin.html"><img src="images/logo lapin2.png" alt="" srcset=""></a>
         </div>
     </footer>
-    <script defer src="js/script.js"></script>
+    <script defer src="js/projet-images.js"></script>
     <script defer src="js/burger.js"></script>
+    <script defer src="js/projets-carousel.js"></script>
 </body>
 </html>
