--- a/services.html
+++ b/services.html
@@ -171,7 +171,8 @@
             <a href="lapin.html"><img src="images/logo lapin2.png" alt="" srcset=""></a>
         </div>
     </footer>
-    <script defer src="js/script.js"></script>
+    <script defer src="js/modal.js"></script>
     <script defer src="js/burger.js"></script>
+    <script defer src="js/sercices-carrousel.js"></script>
 </body>
 </html>
