--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
         <div class="grille-contact">
             <div class="carte-formulaire">
                 <h2 class="titre-section">Envoyez-nous un message</h2>
-                <form action="traitement.php" method="POST" class="formulaire-contact">
+                <form action="#" method="POST" class="formulaire-contact">
                     <div class="groupe-formulaire">
                         <label for="name">Votre nom :</label>
                         <input type="text" id="name" name="name" required>
@@ -156,5 +156,6 @@
     </footer>
     <script defer src="js/script.js"></script>
     <script defer src="js/burger.js"></script>
+    
 </body>
 </html>
