--- a/merci.html
+++ b/merci.html
@@ -229,7 +229,7 @@
             </div>
             <div class="footer-section">
                 <h3>À propos de BLIXT</h3>
-                <p>Votre partenaire de confiance pour des solutions électriques innovantes et durables à Bourges et ses environs. Ensemble construisons l'avenir.</p>
+                <p>Votre partenaire de confiance pour des solutions électriques innovantes et durables à Bourges. Ensemble construisons l'avenir.</p>
             </div>
             <div class="footer-section">
                 <h3>Liens rapides</h3>
