--- a/front-end/html/realisation-projet1.html
+++ b/front-end/html/realisation-projet1.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Installation électrique complète pour une maison neuve et moderne.">
     <title>Réalisation : Maison résidentielle moderne | BLIXT</title>
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/realisationprojet.css">
-    <link rel="stylesheet" href="css/realisation.css">
+    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/realisationprojet.css">
+    <link rel="stylesheet" href="../css/realisation.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
 
     <header>
         <div class="logo-container">
-            <img src="images/logo-transparent.png" alt="Logo de Blixt" class="logo">
+            <img src="../images/logo-transparent.png" alt="Logo de Blixt" class="logo">
         </div>
 
         <button class="menu-burger-bouton" aria-label="Ouvrir le menu de navigation">
@@ -66,10 +66,10 @@
             <div class="conteneur">
                 <h2 class="titre-galerie">Aperçu du projet en images</h2>
                 <div class="galerie-grille" id="galerie-grille-mobile">
-                    <img src="images/boitiersolaire.jpg" alt="Vue de l'installation électrique principale" class="galerie-image">
-                    <img src="images/domotique.jpg" alt="Détail du tableau électrique" class="galerie-image">
-                    <img src="images/copain.png" alt="Installation d'un éclairage de salon intelligent" class="galerie-image">
-                    <img src="images/entreprisechantiert.jpg" alt="Pose des interrupteurs de domotique" class="galerie-image">
+                    <img src="../images/boitiersolaire.jpg" alt="Vue de l'installation électrique principale" class="galerie-image">
+                    <img src="../images/domotique.jpg" alt="Détail du tableau électrique" class="galerie-image">
+                    <img src="../images/copain.png" alt="Installation d'un éclairage de salon intelligent" class="galerie-image">
+                    <img src="../images/entreprisechantiert.jpg" alt="Pose des interrupteurs de domotique" class="galerie-image">
                 </div>
                 
                 <div class="galerie-points">
@@ -90,11 +90,13 @@
     <footer class="site-footer">
         <div class="footer-container">
             <div class="logo-container-footer">
-                <img src="images/Logo_B_-_Blixt-transparent.png" alt="Logo de Blixt" class="logo">
+                <img src="../images/Logo_B_-_Blixt-transparent.png" alt="Logo de Blixt" class="logo">
             </div>
             <div class="footer-section">
                 <h3>À propos de BLIXT</h3>
-                <p>Votre partenaire de confiance pour des solutions électriques innovantes et durables à Bourges et ses environs. Ensemble construisons l'avenir.</p>
+                <p>Votre partenaire de confiance pour des solutions électriques innovantes et durables à Bourges et ses environs. Ensemble construisons l'avenir.</p><br>
+                <p><a href="">Mentions légales</a></p>
+                <p><a href="">Politique de confidentialités</a></p>
             </div>
             <div class="footer-section ">
                 <h3>Liens rapides</h3>
@@ -115,19 +117,19 @@
             <div class="footer-section-social">
                 <h3>Suivez-nous</h3>
                 <div class="social-icons">
-                    <a href="#" aria-label="Facebook"><img src="images/icons8-facebook-48.png" alt="Facebook"></a>
-                    <a href="#" aria-label="Instagram"><img src="images/icons8-instagram-48.png" alt="Instagram"></a>
-                    <a href="https://www.linkedin.com/company/sas-blixt/" aria-label="linkedin"><img src="images/icons8-linkedin-48.png" alt="Instagram"></a>
+                    <a href="#" aria-label="Facebook"><img src="../images/icons8-facebook-48.png" alt="Facebook"></a>
+                    <a href="#" aria-label="Instagram"><img src="../images/icons8-instagram-48.png" alt="Instagram"></a>
+                    <a href="https://www.linkedin.com/company/sas-blixt/" aria-label="linkedin"><img src="../images/icons8-linkedin-48.png" alt="Instagram"></a>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
             <p>© 2025 BLIXT. Tous droits réservés. Site réalisé par la team Casse Grain.</p>
-            <a href="lapin.html"><img src="images/logo lapin2.png" alt="" srcset=""></a>
+            <a href="lapin.html"><img src="../images/logo lapin2.png" alt="" srcset=""></a>
         </div>
     </footer>
-    <script defer src="js/galerie.js"></script>
-    <script defer src="js/burger.js"></script>
+    <script defer src="../js/galerie.js"></script>
+    <script defer src="../js/burger.js"></script>
     s
 </body>
 </html>
