--- a/lapin.html
+++ b/lapin.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La Team Casse Grain - Le Lapin Développeur</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/lapin.css"> 
+    <link rel="stylesheet" href="lapin.css"> 
 </head>
 <body>
 
@@ -13,7 +13,7 @@
         <div class="conteneur entete-contenu">
             <a href="#accueil" class="logo-conteneur">
                 <span class="logo-symbole">
-                    <img src="images/logo lapin2.png" alt="Logo La Team Casse Grain">
+                    <img src="../images/logo lapin2.png" alt="Logo La Team Casse Grain">
                 </span>
                 <span class="logo-texte titre-neon">La Team Casse Grain</span>
             </a>
