--- a/front-end/html/apropos.html
+++ b/front-end/html/apropos.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Découvrez l'histoire de BLIXT">
     <title>À propos de BLIXT | Votre électricien à Bourges</title>
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/apropos.css">
+    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/apropos.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
 
  <header>
         <div class="logo-container">
-            <img src="images/logo-transparent.png" alt="Logo de Blixt" class="logo">
+            <img src="../images/logo-transparent.png" alt="Logo de Blixt" class="logo">
         </div>
 
         <button class="menu-burger-bouton" aria-label="Ouvrir le menu de navigation">
@@ -50,7 +50,7 @@
         <div class="conteneur">
             <div class="histoire-grille">
                 <div class="image-boite">
-                    <img src="images/clown.jpg" alt="Portrait d'Antoine Nivelet" class="image-histoire">
+                    <img src="../images/clown.jpg" alt="Portrait d'Antoine Nivelet" class="image-histoire">
                     <div class="image-legende">Moi c'est LAPIN!!!!</div>
                 </div>
                 <div class="histoire-texte">
@@ -68,17 +68,17 @@
             <div class="conteneur-flex">
                 <div class="certif-bloc carte">
                     <div class="icone-boite">
-                        <img src="images/icone-certif.png" alt="Icône certifications" class="icone">
+                        <img src="../images/icone-certif.png" alt="Icône certifications" class="icone">
                     </div>
                     <h3>Nos certifications : Gage de Confiance</h3>
                     <p>Nous ne laissons rien au hasard. Nos certifications **Qualifelec** et **RGE** ne sont pas de simples labels, mais la preuve concrète de notre engagement envers l'excellence technique, la sécurité et l'environnement. Avec BLIXT, vous choisissez un partenaire reconnu pour son expertise et sa conformité aux normes les plus exigeantes.</p>
                     <div class="logos-certifs">
-                        <img src="images/qualifelec.png" alt="Logo Qualifelec" class="logo-certif">
+                        <img src="../images/qualifelec.png" alt="Logo Qualifelec" class="logo-certif">
                     </div>
                 </div>
                 <div class="valeurs-bloc carte">
                     <div class="icone-boite">
-                           <img src="images/icons8-coeur-rouge-94.png" alt="Icône valeurs" class="icone">
+                           <img src="../images/icons8-coeur-rouge-94.png" alt="Icône valeurs" class="icone">
                     </div>
                     <h3>Nos valeurs : L'Humain au cœur</h3>
                     <p>1 Professionnalisme : Chaque intervention est une démonstration de notre expertise.</p>
@@ -110,11 +110,13 @@
     <footer class="site-footer">
         <div class="footer-container">
             <div class="logo-container-footer">
-                <img src="images/Logo_B_-_Blixt-transparent.png" alt="Logo de Blixt" class="logo">
+                <img src="../images/Logo_B_-_Blixt-transparent.png" alt="Logo de Blixt" class="logo">
             </div>
             <div class="footer-section">
                 <h3>À propos de BLIXT</h3>
-                <p>Votre partenaire de confiance pour des solutions électriques innovantes et durables à Bourges et ses environs. Ensemble construisons l'avenir.</p>
+                <p>Votre partenaire de confiance pour des solutions électriques innovantes et durables à Bourges et ses environs. Ensemble construisons l'avenir.</p><br>
+                <p><a href="">Mentions légales</a></p>
+                <p><a href="">Politique de confidentialités</a></p>
             </div>
             <div class="footer-section ">
                 <h3>Liens rapides</h3>
@@ -135,18 +137,18 @@
             <div class="footer-section-social">
                 <h3>Suivez-nous</h3>
                 <div class="social-icons">
-                    <a href="#" aria-label="Facebook"><img src="images/icons8-facebook-48.png" alt="Facebook"></a>
-                    <a href="#" aria-label="Instagram"><img src="images/icons8-instagram-48.png" alt="Instagram"></a>
-                    <a href="https://www.linkedin.com/company/sas-blixt/" aria-label="linkedin"><img src="images/icons8-linkedin-48.png" alt="Instagram"></a>
+                    <a href="#" aria-label="Facebook"><img src="../images/icons8-facebook-48.png" alt="Facebook"></a>
+                    <a href="#" aria-label="Instagram"><img src="../images/icons8-instagram-48.png" alt="Instagram"></a>
+                    <a href="https://www.linkedin.com/company/sas-blixt/" aria-label="linkedin"><img src="../images/icons8-linkedin-48.png" alt="Instagram"></a>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
             <p>© 2025 BLIXT. Tous droits réservés. Site réalisé par la team Casse Grain.</p>
-            <a href="lapin.html"><img src="images/logo lapin2.png" alt="" srcset=""></a>
+            <a href="lapin.html"><img src="../images/logo lapin2.png" alt="" srcset=""></a>
         </div>
     </footer>
-    <script defer src="js/script.js"></script>
-    <script defer src="js/burger.js"></script>
+    <script defer src="../js/script.js"></script>
+    <script defer src="../js/burger.js"></script>
 </body>
 </html>
