--- a/front-end/html/contact.html
+++ b/front-end/html/contact.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Contactez BLIXT pour un devis gratuit et personnalisé à Bourges.">
     <title>Contactez BLIXT | Demandez un devis à Bourges</title>
-    <link rel="stylesheet" href="css/contact.css">
-    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="../css/contact.css">
+    <link rel="stylesheet" href="../css/base.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
 
  <header>
         <div class="logo-container">
-            <img src="images/logo-transparent.png" alt="Logo de Blixt" class="logo">
+            <img src="../images/logo-transparent.png" alt="Logo de Blixt" class="logo">
         </div>
 
         <button class="menu-burger-bouton" aria-label="Ouvrir le menu de navigation">
@@ -46,65 +46,6 @@
             </div>
         </div>
     </section>
-
-  <!-- <section class="section-contact">
-    <div class="conteneur">
-        <div class="grille-contact">
-            <div class="carte-formulaire">
-                <h2 class="titre-section">Envoyez-nous un message</h2>
-                <form action="#" method="POST" class="formulaire-contact">
-                    <div class="groupe-formulaire">
-                        <label for="name">Votre nom :</label>
-                        <input type="text" id="name" name="name" required>
-                    </div>
-                    <div class="groupe-formulaire">
-                        <label for="email">Votre e-mail :</label>
-                        <input type="email" id="email" name="email" required>
-                    </div>
-                    <div class="groupe-formulaire">
-                        <label for="phone">Votre téléphone (optionnel) :</label>
-                        <input type="tel" id="phone" name="phone">
-                    </div>
-                    <div class="groupe-formulaire">
-                        <label for="message">Votre message :</label>
-                        <textarea id="message" name="message" rows="6" required></textarea>
-                    </div>
-                    <div class="groupe-formulaires">
-                        <input type="checkbox" id="consent" name="consent" required>
-                        <label for="consent">J'accepte que mes données soient utilisées pour cette demande.</label>
-                    </div>
-                    <button type="submit" class="btn-contact">Envoyer votre message</button>
-                </form>
-            </div>
-
-            <div class="carte-info-contact">
-                <div class="bloc-info1">
-                <div class="bloc-info">
-                    <h3 class="titre-info">Par téléphone:</h3>
-                    <p class="details-info"><a href="tel:+330123456789">01 23 45 67 89</a></p>
-                </div>
-                <div class="bloc-info">
-                    <h3 class="titre-info">Par e-mail :</h3>
-                    <p class="details-info"><a href="mailto:contact@blixtelec.fr">contact@blixtelec.fr</a></p>
-                </div>
-                <div class="bloc-info">
-                    <h3 class="titre-info">Notre adresse :</h3>
-                    <p class="details-info">123 Rue de l'Électricité<br>18000 Bourges</p>
-                </div>
-                <div class="bloc-info">
-                    <h3 class="titre-info">Horaires :</h3>
-                    <p class="details-info">Du Lundi au Vendredi :<br> 8h00 - 18h00<br>Dépannage d'urgence 7j/7</p>
-                </div>
-                </div>
-                <div class="conteneur-carte">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12345.678901234567!2d2.3916962!3d47.0810125!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47fa908332145025%3A0x6b772c2957b4f535!2s18000%20Bourges%2C%20France!5e0!3m2!1sfr!2sfr!4v1633512345678!5m2!1sfr!2sfr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
-                    title="Localisation de BLIXT à Bourges sur Google Maps">
-                </iframe>
-                </div>
-            </div>
-        </div>
-    </div>
-</section> -->
 <section class="section-contact">
     <div class="conteneur">
         <div class="grille-contact">
@@ -180,11 +121,13 @@
 <footer class="site-footer">
         <div class="footer-container">
             <div class="logo-container-footer">
-                <img src="images/Logo_B_-_Blixt-transparent.png" alt="Logo de Blixt" class="logo">
+                <img src="../images/Logo_B_-_Blixt-transparent.png" alt="Logo de Blixt" class="logo">
             </div>
             <div class="footer-section">
                 <h3>À propos de BLIXT</h3>
-                <p>Votre partenaire de confiance pour des solutions électriques innovantes et durables à Bourges et ses environs. Ensemble construisons l'avenir.</p>
+                <p>Votre partenaire de confiance pour des solutions électriques innovantes et durables à Bourges et ses environs. Ensemble construisons l'avenir.</p><br>
+                <p><a href="">Mentions légales</a></p>
+                <p><a href="">Politique de confidentialités</a></p>
             </div>
             <div class="footer-section ">
                 <h3>Liens rapides</h3>
@@ -205,19 +148,19 @@
             <div class="footer-section-social">
                 <h3>Suivez-nous</h3>
                 <div class="social-icons">
-                    <a href="#" aria-label="Facebook"><img src="images/icons8-facebook-48.png" alt="Facebook"></a>
-                    <a href="#" aria-label="Instagram"><img src="images/icons8-instagram-48.png" alt="Instagram"></a>
-                    <a href="https://www.linkedin.com/company/sas-blixt/" aria-label="linkedin"><img src="images/icons8-linkedin-48.png" alt="Instagram"></a>
+                    <a href="#" aria-label="Facebook"><img src="../images/icons8-facebook-48.png" alt="Facebook"></a>
+                    <a href="#" aria-label="Instagram"><img src="../images/icons8-instagram-48.png" alt="Instagram"></a>
+                    <a href="https://www.linkedin.com/company/sas-blixt/" aria-label="linkedin"><img src="../images/icons8-linkedin-48.png" alt="Instagram"></a>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
             <p>© 2025 BLIXT. Tous droits réservés. Site réalisé par la team Casse Grain.</p>
-            <a href="lapin.html"><img src="images/logo lapin2.png" alt="" srcset=""></a>
+            <a href="lapin.html"><img src="../images/logo lapin2.png" alt="" srcset=""></a>
         </div>
     </footer>
-    <script defer src="js/burger.js"></script>
-    <script defer src="js/contact-form.js"></script>
+    <script defer src="../js/burger.js"></script>
+    <script defer src="../js/contact-form.js"></script>
     
 </body>
 </html>
