--- a/front-end/html/index.html
+++ b/front-end/html/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <meta name="description" content="BLIXT : Votre électricien expert et certifié à Bourges (18).">
     <title>BLIXT | Électricien à Bourges, Expert et Certifié</title>
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
@@ -14,7 +14,7 @@
 <body>
   <header>
         <div class="logo-container">
-            <img src="images/logo-transparent.png" alt="Logo de Blixt" class="logo">
+            <img src="../images/logo-transparent.png" alt="Logo de Blixt" class="logo">
         </div>
 
         <button class="menu-burger-bouton" aria-label="Ouvrir le menu de navigation">
@@ -37,9 +37,9 @@
     <main>
     <section class="section-visuelle-accueil">
         <div class="conteneur-diaporama">
-            <div class="diapo actif" style="background-image: url('images/imagentreprise.png');"></div>
-            <div class="diapo" style="background-image: url('images/charlie.jpg');"></div>
-            <div class="diapo" style="background-image: url('images/stockage.png');"></div>
+            <div class="diapo actif" style="background-image: url('../images/imagentreprise.png');"></div>
+            <div class="diapo" style="background-image: url('../images/charlie.jpg');"></div>
+            <div class="diapo" style="background-image: url('../images/stockage.png');"></div>
         </div>
     </section>
     
@@ -55,25 +55,25 @@
         <h2>Les clients qui nous font confiance:</h2>
         <div class="curseur-clients">
             <div class="diapo-logos">
-                <img src="images/picsou.jpg" alt="Picsou">
-                <img src="images/pornhub.png" alt="Pornhub">
-                <img src="images/psa.jpg" alt="PSA">
-                <img src="images/nasa.png" alt="NASA">
-                <img src="images/john deere.jpg" alt="John Deere">
+                <img src="../images/picsou.jpg" alt="Picsou">
+                <img src="../images/pornhub.png" alt="Pornhub">
+                <img src="../images/psa.jpg" alt="PSA">
+                <img src="../images/nasa.png" alt="NASA">
+                <img src="../images/john deere.jpg" alt="John Deere">
             </div>
-            <div class="diapo-logos">
-                <img src="images/picsou.jpg" alt="Picsou">
-                <img src="images/pornhub.png" alt="Pornhub">
-                <img src="images/psa.jpg" alt="PSA">
-                <img src="images/nasa.png" alt="NASA">
-                <img src="images/john deere.jpg" alt="John Deere">
+           <div class="diapo-logos">
+                <img src="../images/picsou.jpg" alt="Picsou">
+                <img src="../images/pornhub.png" alt="Pornhub">
+                <img src="../images/psa.jpg" alt="PSA">
+                <img src="../images/nasa.png" alt="NASA">
+                <img src="../images/john deere.jpg" alt="John Deere">
             </div>
-            <div class="diapo-logos">
-                <img src="images/picsou.jpg" alt="Picsou">
-                <img src="images/pornhub.png" alt="Pornhub">
-                <img src="images/psa.jpg" alt="PSA">
-                <img src="images/nasa.png" alt="NASA">
-                <img src="images/john deere.jpg" alt="John Deere">
+           <div class="diapo-logos">
+                <img src="../images/picsou.jpg" alt="Picsou">
+                <img src="../images/pornhub.png" alt="Pornhub">
+                <img src="../images/psa.jpg" alt="PSA">
+                <img src="../images/nasa.png" alt="NASA">
+                <img src="../images/john deere.jpg" alt="John Deere">
             </div>
         </div>
     </section>
@@ -103,7 +103,7 @@
     <footer class="site-footer">
         <div class="footer-container">
             <div class="logo-container-footer">
-                <img src="images/Logo_B_-_Blixt-transparent.png" alt="Logo de Blixt" class="logo">
+                <img src="../images/Logo_B_-_Blixt-transparent.png" alt="Logo de Blixt" class="logo">
             </div>
             <div class="footer-section">
                 <h3>À propos de BLIXT</h3>
@@ -130,18 +130,18 @@
             <div class="footer-section-social">
                 <h3>Suivez-nous</h3>
                 <div class="social-icons">
-                    <a href="#" aria-label="Facebook"><img src="images/icons8-facebook-48.png" alt="Facebook"></a>
-                    <a href="#" aria-label="Instagram"><img src="images/icons8-instagram-48.png" alt="Instagram"></a>
-                    <a href="https://www.linkedin.com/company/sas-blixt/" aria-label="linkedin"><img src="images/icons8-linkedin-48.png" alt="Instagram"></a>
+                    <a href="#" aria-label="Facebook"><img src="../images/icons8-facebook-48.png" alt="Facebook"></a>
+                    <a href="#" aria-label="Instagram"><img src="../images/icons8-instagram-48.png" alt="Instagram"></a>
+                    <a href="https://www.linkedin.com/company/sas-blixt/" aria-label="linkedin"><img src="../images/icons8-linkedin-48.png" alt="Instagram"></a>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
             <p>© 2025 BLIXT. Tous droits réservés. Site réalisé par la team Casse Grain.</p>
-            <a href="lapin.html"><img src="images/logo lapin2.png" alt="" srcset=""></a>
+            <a href="lapin.html"><img src="../images/logo lapin2.png" alt="" srcset=""></a>
         </div>
     </footer>
-    <script defer src="js/script.js"></script>
-    <script defer src="js/burger.js"></script>
+    <script defer src="../js/script.js"></script>
+    <script defer src="../js/burger.js"></script>
 </body>
 </html>
