--- a/front-end/html/merci.html
+++ b/front-end/html/merci.html
@@ -167,7 +167,7 @@
 
     <header>
         <div class="logo-container">
-            <img src="images/logo-transparent.png" alt="Logo de Blixt" class="logo">
+            <img src="../images/logo-transparent.png" alt="Logo de Blixt" class="logo">
         </div>
 
         <button class="menu-burger-bouton" aria-label="Ouvrir le menu de navigation">
@@ -225,7 +225,7 @@
     <footer class="site-footer">
         <div class="footer-container">
             <div class="logo-container-footer">
-                <img src="images/Logo_B_-_Blixt-transparent.png" alt="Logo de Blixt" class="logo">
+                <img src="../images/Logo_B_-_Blixt-transparent.png" alt="Logo de Blixt" class="logo">
             </div>
             <div class="footer-section">
                 <h3>À propos de BLIXT</h3>
@@ -250,18 +250,18 @@
             <div class="footer-section-social">
                 <h3>Suivez-nous</h3>
                 <div class="social-icons">
-                    <a href="#" aria-label="Facebook"><img src="images/icons8-facebook-48.png" alt="Facebook"></a>
-                    <a href="#" aria-label="Instagram"><img src="images/icons8-instagram-48.png" alt="Instagram"></a>
-                    <a href="https://www.linkedin.com/company/sas-blixt/" aria-label="linkedin"><img src="images/icons8-linkedin-48.png" alt="LinkedIn"></a>
+                    <a href="#" aria-label="Facebook"><img src="../images/icons8-facebook-48.png" alt="Facebook"></a>
+                    <a href="#" aria-label="Instagram"><img src="../images/icons8-instagram-48.png" alt="Instagram"></a>
+                    <a href="https://www.linkedin.com/company/sas-blixt/" aria-label="linkedin"><img src="../images/icons8-linkedin-48.png" alt="LinkedIn"></a>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
             <p>© 2025 BLIXT. Tous droits réservés. Site réalisé par la team Casse Grain.</p>
-            <a href="lapin.html"><img src="images/logo lapin2.png" alt=""></a>
+            <a href="lapin.html"><img src="../images/logo lapin2.png" alt=""></a>
         </div>
     </footer>
 
-    <script defer src="js/burger.js"></script>
+    <script defer src="../js/burger.js"></script>
 </body>
 </html>
