--- a/front-end/html/services.html
+++ b/front-end/html/services.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Découvrez tous les services électriques de BLIXT">
     <title>Nos services d'électricité | BLIXT</title>
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/services.css">
+    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/services.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
 
   <header>
         <div class="logo-container">
-            <img src="images/logo-transparent.png" alt="Logo de Blixt" class="logo">
+            <img src="../images/logo-transparent.png" alt="Logo de Blixt" class="logo">
         </div>
 
         <button class="menu-burger-bouton" aria-label="Ouvrir le menu de navigation">
@@ -54,7 +54,7 @@
 
                 <article class="carte-service">
                     <div class="icone-carte">
-                        <img src="images/icon-electricite-generale.svg" alt="Icône électricité générale" class="icone-service">
+                        <img src="../images/icon-electricite-generale.svg" alt="Icône électricité générale" class="icone-service">
                     </div>
                     <h3>Électricité Générale</h3>
                     <p>Installation, rénovation, et maintenance de systèmes électriques pour un environnement sûr et performant.</p>
@@ -67,7 +67,7 @@
 
                 <article class="carte-service">
                     <div class="icone-carte">
-                        <img src="images/icon-depannage.svg" alt="Icône dépannage" class="icone-service">
+                        <img src="../images/icon-depannage.svg" alt="Icône dépannage" class="icone-service">
                     </div>
                     <h3>Dépannage & Urgence</h3>
                     <p>Intervention rapide et sécurisée 7j/7 pour résoudre toute panne ou dysfonctionnement électrique.</p>
@@ -76,7 +76,7 @@
 
                 <article class="carte-service">
                     <div class="icone-carte">
-                        <img src="images/icon-borne-recharge.svg" alt="Icône borne de recharge" class="icone-service">
+                        <img src="../images/icon-borne-recharge.svg" alt="Icône borne de recharge" class="icone-service">
                     </div>
                     <h3>Bornes de Recharge VE</h3>
                     <p>Installation et entretien de bornes de recharge pour véhicules électriques, certifié Qualifelec IRVE.</p>
@@ -94,7 +94,7 @@
 
                 <article class="carte-service">
                     <div class="icone-carte">
-                        <img src="images/icon-renovation.svg" alt="Icône rénovation" class="icone-service">
+                        <img src="../images/icon-renovation.svg" alt="Icône rénovation" class="icone-service">
                     </div>
                     <h3>Rénovation Électrique</h3>
                     <p>Mise à niveau de vos installations anciennes pour les rendre conformes, sécurisées et performantes.</p>
@@ -103,7 +103,7 @@
 
                 <article class="carte-service">
                     <div class="icone-carte">
-                        <img src="images/icon-eclairage.svg" alt="Icône éclairage" class="icone-service">
+                        <img src="../images/icon-eclairage.svg" alt="Icône éclairage" class="icone-service">
                     </div>
                     <h3>Éclairage Pro & Particulier</h3>
                     <p>Conception et installation d'éclairages intérieurs et extérieurs, optimisant esthétique et consommation.</p>
@@ -135,11 +135,13 @@
     <footer class="site-footer">
         <div class="footer-container">
             <div class="logo-container-footer">
-                <img src="images/Logo_B_-_Blixt-transparent.png" alt="Logo de Blixt" class="logo">
+                <img src="../images/Logo_B_-_Blixt-transparent.png" alt="Logo de Blixt" class="logo">
             </div>
             <div class="footer-section">
                 <h3>À propos de BLIXT</h3>
-                <p>Votre partenaire de confiance pour des solutions électriques innovantes et durables à Bourges et ses environs. Ensemble construisons l'avenir.</p>
+                <p>Votre partenaire de confiance pour des solutions électriques innovantes et durables à Bourges et ses environs. Ensemble construisons l'avenir.</p><br>
+                <p><a href="">Mentions légales</a></p>
+                <p><a href="">Politique de confidentialités</a></p>
             </div>
             <div class="footer-section ">
                 <h3>Liens rapides</h3>
@@ -160,19 +162,19 @@
             <div class="footer-section-social">
                 <h3>Suivez-nous</h3>
                 <div class="social-icons">
-                    <a href="#" aria-label="Facebook"><img src="images/icons8-facebook-48.png" alt="Facebook"></a>
-                    <a href="#" aria-label="Instagram"><img src="images/icons8-instagram-48.png" alt="Instagram"></a>
-                    <a href="https://www.linkedin.com/company/sas-blixt/" aria-label="linkedin"><img src="images/icons8-linkedin-48.png" alt="Instagram"></a>
+                    <a href="#" aria-label="Facebook"><img src="../images/icons8-facebook-48.png" alt="Facebook"></a>
+                    <a href="#" aria-label="Instagram"><img src="../images/icons8-instagram-48.png" alt="Instagram"></a>
+                    <a href="https://www.linkedin.com/company/sas-blixt/" aria-label="linkedin"><img src="../images/icons8-linkedin-48.png" alt="Instagram"></a>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
             <p>© 2025 BLIXT. Tous droits réservés. Site réalisé par la team Casse Grain.</p>
-            <a href="lapin.html"><img src="images/logo lapin2.png" alt="" srcset=""></a>
+            <a href="lapin.html"><img src="../images/logo lapin2.png" alt="" srcset=""></a>
         </div>
     </footer>
-    <script defer src="js/modal.js"></script>
-    <script defer src="js/burger.js"></script>
-    <script defer src="js/sercices-carrousel.js"></script>
+    <script defer src="../js/modal.js"></script>
+    <script defer src="../js/burger.js"></script>
+    <script defer src="../js/sercices-carrousel.js"></script>
 </body>
 </html>
