--- a/front-end/html/merci.html
+++ b/front-end/html/merci.html
@@ -5,163 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Merci pour votre message. L'équipe BLIXT vous répondra rapidement.">
     <title>Merci ! | BLIXT</title>
-    <link rel="stylesheet" href="css/contact.css">
-    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="../css/contact.css">
+    <link rel="stylesheet" href="../css/base.css">
+    <link rel="stylesheet" href="../css/merci.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Sansation:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
-    <style>
-        .section-merci {
-            min-height: 60vh;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            text-align: center;
-            padding: 4rem 2rem;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-        }
-
-        .conteneur-merci {
-            max-width: 700px;
-            background: white;
-            padding: 3rem 2rem;
-            border-radius: 16px;
-            box-shadow: 0 20px 60px rgba(0,0,0,0.3);
-        }
-
-        .icone-succes {
-            font-size: 5rem;
-            margin-bottom: 1.5rem;
-            animation: pop 0.5s ease-out;
-        }
-
-        @keyframes pop {
-            0% { transform: scale(0); opacity: 0; }
-            50% { transform: scale(1.2); }
-            100% { transform: scale(1); opacity: 1; }
-        }
-
-        .conteneur-merci h1 {
-            color: #333;
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
-        }
-
-        .conteneur-merci p {
-            color: #666;
-            font-size: 1.2rem;
-            line-height: 1.6;
-            margin-bottom: 2rem;
-        }
-
-        .liste-prochaines-etapes {
-            background: #f8f9fa;
-            padding: 2rem;
-            border-radius: 8px;
-            margin: 2rem 0;
-            text-align: left;
-        }
-
-        .liste-prochaines-etapes h2 {
-            color: #667eea;
-            font-size: 1.5rem;
-            margin-bottom: 1rem;
-            text-align: center;
-        }
-
-        .liste-prochaines-etapes ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        .liste-prochaines-etapes li {
-            padding: 0.8rem 0;
-            padding-left: 2rem;
-            position: relative;
-            color: #555;
-        }
-
-        .liste-prochaines-etapes li:before {
-            content: "✓";
-            position: absolute;
-            left: 0;
-            color: #667eea;
-            font-weight: bold;
-            font-size: 1.2rem;
-        }
-
-        .boutons-action {
-            display: flex;
-            gap: 1rem;
-            justify-content: center;
-            flex-wrap: wrap;
-            margin-top: 2rem;
-        }
-
-        .btn {
-            display: inline-block;
-            padding: 1rem 2rem;
-            background: #667eea;
-            color: white;
-            text-decoration: none;
-            border-radius: 8px;
-            font-weight: 600;
-            transition: all 0.3s ease;
-        }
-
-        .btn:hover {
-            background: #5568d3;
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(102, 126, 234, 0.4);
-        }
-
-        .btn-secondaire {
-            background: white;
-            color: #667eea;
-            border: 2px solid #667eea;
-        }
-
-        .btn-secondaire:hover {
-            background: #667eea;
-            color: white;
-        }
-
-        .info-contact {
-            margin-top: 2rem;
-            padding-top: 2rem;
-            border-top: 1px solid #ddd;
-            color: #777;
-            font-size: 0.95rem;
-        }
-
-        .info-contact a {
-            color: #667eea;
-            text-decoration: none;
-            font-weight: 600;
-        }
-
-        .info-contact a:hover {
-            text-decoration: underline;
-        }
-
-        @media (max-width: 768px) {
-            .conteneur-merci {
-                padding: 2rem 1.5rem;
-            }
-
-            .conteneur-merci h1 {
-                font-size: 2rem;
-            }
-
-            .boutons-action {
-                flex-direction: column;
-            }
-
-            .btn {
-                width: 100%;
-            }
-        }
-    </style>
+    
 </head>
 <body>
 
@@ -200,12 +50,12 @@
                 </p>
 
                 <div class="liste-prochaines-etapes">
-                    <h2>Que se passe-t-il maintenant ?</h2>
+                    <h2>Que se passe-t-il maintenant?</h2>
                     <ul>
-                        <li>Notre équipe examine votre demande sous 24h</li>
-                        <li>Nous vous contactons pour échanger sur votre projet</li>
-                        <li>Nous établissons un devis personnalisé et gratuit</li>
-                        <li>Nous planifions l'intervention selon vos disponibilités</li>
+                        <li>✅ Notre équipe examine votre demande sous 24h</li>
+                        <li>✅ Nous vous contactons pour échanger sur votre projet</li>
+                        <li>✅ Nous établissons un devis personnalisé et gratuit</li>
+                        <li>✅ Nous planifions l'intervention selon vos disponibilités</li>
                     </ul>
                 </div>
 
@@ -229,9 +79,11 @@
             </div>
             <div class="footer-section">
                 <h3>À propos de BLIXT</h3>
-                <p>Votre partenaire de confiance pour des solutions électriques innovantes et durables à Bourges. Ensemble construisons l'avenir.</p>
+                <p>Votre partenaire de confiance pour des solutions électriques innovantes et durables à Bourges et ses environs. Ensemble construisons l'avenir.</p><br>
+                <p><a href="">Mentions légales</a></p>
+                <p><a href="">Politique de confidentialités</a></p>
             </div>
-            <div class="footer-section">
+            <div class="footer-section ">
                 <h3>Liens rapides</h3>
                 <ul>
                     <li><a href="index.html">Accueil</a></li>
@@ -252,13 +104,13 @@
                 <div class="social-icons">
                     <a href="#" aria-label="Facebook"><img src="../images/icons8-facebook-48.png" alt="Facebook"></a>
                     <a href="#" aria-label="Instagram"><img src="../images/icons8-instagram-48.png" alt="Instagram"></a>
-                    <a href="https://www.linkedin.com/company/sas-blixt/" aria-label="linkedin"><img src="../images/icons8-linkedin-48.png" alt="LinkedIn"></a>
+                    <a href="https://www.linkedin.com/company/sas-blixt/" aria-label="linkedin"><img src="../images/icons8-linkedin-48.png" alt="Instagram"></a>
                 </div>
             </div>
         </div>
         <div class="footer-bottom">
             <p>© 2025 BLIXT. Tous droits réservés. Site réalisé par la team Casse Grain.</p>
-            <a href="lapin.html"><img src="../images/logo lapin2.png" alt=""></a>
+            <a href="lapin.html"><img src="../images/logo lapin2.png" alt="" srcset=""></a>
         </div>
     </footer>
 
